--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "reactstrap": "^8.9.0",
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
