--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-cookie": "^4.0.3",
+    "react-country-region-selector": "^3.1.0",
     "react-dom": "^17.0.2",
-
     "react-flash-message": "^1.0.7",
-
-
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-
+    "react-select": "^4.3.1",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^7.0.4",
-
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
